tests/error/testcaseErroSomaDoisTipos.g
int x;
car c;

programa {
    x = 5;
    c = 'a';

    x = x + c;

    se (c == 5) entao
        escreva "impossivel";
    senao
        escreva "ok";
}